# fetchapi

./: .env.example  .gitignore  Makefile  README.md
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py  002_chunks.py  003_seed_default_workspace.py
backend/src/fetch/: config.py  main.py
backend/src/fetch/api/: dependencies.py  errors.py
backend/src/fetch/api/v1/: operations.py  sources.py
backend/src/fetch/application/ingestion/: service.py
backend/src/fetch/application/sources/: service.py
backend/src/fetch/domain/: entities.py  enums.py  errors.py  protocols.py
backend/src/fetch/infrastructure/db/: models.py  repositories.py  session.py
backend/src/fetch/infrastructure/embeddings/: chunker.py  profile.py
backend/src/fetch/infrastructure/llm/: base.py  nvidia_nim.py
backend/src/fetch/infrastructure/openapi/: extractor.py  validator.py
backend/src/fetch/infrastructure/qdrant/: repository.py
backend/src/fetch/infrastructure/storage/: minio.py
backend/tests/fixtures/openapi/: deprecated_operations.yaml  internal_refs.yaml  invalid_missing_info.yaml  invalid_missing_paths.yaml  large_operation.yaml  malformed_yaml.yaml  multiple_security_schemes.yaml  openapi_31_nullable.yaml  recursive_schema.yaml  valid_minimal.yaml
backend/tests/integration/: test_ingestion.py
backend/tests/unit/: test_chunker.py  test_config.py  test_domain.py  test_nvidia_nim_provider.py  test_openapi_extractor.py  test_openapi_validator.py
examples/github/: openapi.yaml
examples/stripe/: openapi.yaml
frontend/: .env.local.example  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/ingest/: page.tsx
frontend/app/sources/[id]/: layout.tsx  page.tsx
frontend/app/sources/[id]/auth/: page.tsx
frontend/app/sources/[id]/chat/: page.tsx
frontend/app/sources/[id]/generate/: page.tsx
frontend/app/sources/[id]/schemas/: page.tsx
frontend/components/layout/: page-header.tsx  sidebar.tsx  source-tab-nav.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  empty-state.tsx  input.tsx  scroll-reveal-container.tsx  tilt-card.tsx
frontend/features/ingest/: ingest-form.tsx
frontend/features/sources/: source-card.tsx
frontend/lib/: api.ts  types.ts  utils.ts
frontend/lib/hooks/: use-scroll-reveal.ts  use-tilt.ts
infra/: compose.yaml
(+1 files in other folders)
