[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fetch"
version = "0.1.0"
description = "API documentation intelligence and integration copilot"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    # Database
    "sqlalchemy[asyncio]>=2.0.36,<3",
    "alembic>=1.14,<2",
    "asyncpg>=0.30,<1",
    "psycopg[binary]>=3.2,<4",
    # Vector DB
    "qdrant-client[async]>=1.12,<2",
    # Cache / locks
    "redis[asyncio]>=5.2,<6",
    # Object storage
    "aioboto3>=13.0,<14",
    # HTTP client
    "httpx[asyncio]>=0.28,<1",
    # OpenAPI parsing
    "openapi-spec-validator>=0.7,<1",
    "PyYAML>=6.0,<7",
    "jsonschema>=4.23,<5",
    "jsonpointer>=3.0,<4",
    # MCP
    "mcp[cli]>=1.3,<2",
    # LLM / Embeddings / Reranker — NVIDIA NIM via OpenAI-compatible API
    "openai>=1.52,<2",
    # Observability
    "opentelemetry-api>=1.29,<2",
    "opentelemetry-sdk>=1.29,<2",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "prometheus-client>=0.21,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "pytest-cov>=6.0,<7",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "types-PyYAML>=6.0,<7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fetch"]

# ── Ruff ──────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "PT", "RUF"]
ignore = [
    "E501",  # line too long — handled by the formatter
    "B008",  # function calls in default args — FastAPI Depends() relies on this
]

[tool.ruff.lint.isort]
known-first-party = ["fetch"]

[tool.ruff.format]
quote-style = "double"

# ── Mypy ──────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["migrations/"]

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires running infrastructure (postgres, qdrant, redis, minio)",
    "e2e: full end-to-end tests",
    "security: security-focused tests",
]
